syntax = "proto3";

package auth.models.v1;

option go_package = "github.com/vbncursed/medialog/auth/internal/pb/models";

// RegisterRequest - запрос на регистрацию пользователя
message RegisterRequest {
  string email = 1; // Email пользователя
  string password = 2; // Пароль пользователя
}

// LoginRequest - запрос на вход в систему
message LoginRequest {
  string email = 1; // Email пользователя
  string password = 2; // Пароль пользователя
}

// RefreshRequest - запрос на обновление токенов
message RefreshRequest {
  string refresh_token = 1; // Refresh token для обновления
}

// LogoutRequest - запрос на выход из сессии
message LogoutRequest {
  string refresh_token = 1; // Refresh token сессии для отзыва
}

// LogoutAllRequest - запрос на выход со всех устройств
message LogoutAllRequest {
  string refresh_token = 1; // Refresh token одной из сессий
}

// AuthResponse - ответ с токенами доступа
message AuthResponse {
  uint64 user_id = 1; // ID пользователя
  string access_token = 2; // JWT access token
  string refresh_token = 3; // Opaque refresh token
}

// LogoutResponse - ответ на запросы выхода из сессии
message LogoutResponse {
  bool success = 1; // Флаг успешного выполнения операции
  string message = 2; // Сообщение о результате операции
}

// UpdateUserRoleRequest - запрос на изменение роли пользователя
message UpdateUserRoleRequest {
  uint64 user_id = 1; // ID пользователя, роль которого нужно изменить
  string role = 2; // Новая роль (user или admin)
}

// UpdateUserRoleResponse - ответ на запрос изменения роли пользователя
message UpdateUserRoleResponse {
  bool success = 1; // Флаг успешного выполнения операции
  string message = 2; // Сообщение о результате операции
}
